--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "mgkerasp",
   "version": "1.0.0",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "ts-loader": "^9.4.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
