rewrite to react tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
             "ESNext"
         ],
         "importHelpers": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "jsx": "react-jsx"
     },
     "exclude": [
         "dist",
