--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "mgkerasp",
   "version": "1.0.0",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-app-polyfill": "^3.0.0"
+  },
   "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.14.0",
     "ts-loader": "^9.4.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
