--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.14.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
