--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "html-webpack-plugin": "^5.5.0",
     "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.14.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "tslib": "^2.4.1",
