--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "mgkerasp",
   "version": "1.0.0",
   "dependencies": {
+    "buffer": "^6.0.3",
+    "gzip-js": "^0.3.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
+    "@types/gzip-js": "^0.3.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "copy-webpack-plugin": "^11.0.0",
